# Quickcheck

./: README.md  dune-project  quickcheck.opam  quickcheckM.opam  testing.opam
lib/: dune  quickCheck.ml
tests/: dune  test.ml
